--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
@@ -2940,6 +2940,218 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### Exercícios 03.03 (Calculando a média de uma variável) e 03.04 (Média por categoria) "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "source": [
+    "dataset = pd.DataFrame({\n",
+    "    'Sexo': ['H', 'M', 'M', 'M', 'M', 'H', 'H', 'H', 'M', 'M'],\n",
+    "    'Idade': [53, 72, 54, 27, 30, 40, 58, 32, 44, 51]\n",
+    "})"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "source": [
+    "dataset['Idade'].mean()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "46.1"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 58
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "source": [
+    "dataset"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sexo</th>\n",
+       "      <th>Idade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>H</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>H</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>H</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>H</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>M</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>M</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Sexo  Idade\n",
+       "0    H     53\n",
+       "1    M     72\n",
+       "2    M     54\n",
+       "3    M     27\n",
+       "4    M     30\n",
+       "5    H     40\n",
+       "6    H     58\n",
+       "7    H     32\n",
+       "8    M     44\n",
+       "9    M     51"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 59
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "source": [
+    "dataset.mean()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Idade    46.1\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 61
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "source": [
+    "dataset.groupby('Sexo')['Idade'].mean()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Sexo\n",
+       "H    45.750000\n",
+       "M    46.333333\n",
+       "Name: Idade, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 68
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "source": [
+    "dataset.groupby('Sexo').mean().loc['H']"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Idade    45.75\n",
+       "Name: H, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 69
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## <font color=green>3.2 Mediana</font>\n",
     "***\n",
     "\n",
@@ -2990,9 +3202,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 91,
+   "source": [
+    "notas_fulano = df['Fulano']\n",
+    "notas_fulano"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Matemática     8\n",
+       "Português     10\n",
+       "Inglês         4\n",
+       "Geografia      8\n",
+       "História       6\n",
+       "Física        10\n",
+       "Química        8\n",
+       "Name: Fulano, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 91
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3005,9 +3238,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 92,
+   "source": [
+    "notas_fulano = notas_fulano.sort_values()\n",
+    "notas_fulano"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Inglês         4\n",
+       "História       6\n",
+       "Matemática     8\n",
+       "Geografia      8\n",
+       "Química        8\n",
+       "Português     10\n",
+       "Física        10\n",
+       "Name: Fulano, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 92
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "source": [
+    "notas_fulano = notas_fulano.reset_index()\n",
+    "notas_fulano"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Fulano</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Inglês</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>História</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Matemática</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Geografia</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Química</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Português</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Física</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        index  Fulano\n",
+       "0      Inglês       4\n",
+       "1    História       6\n",
+       "2  Matemática       8\n",
+       "3   Geografia       8\n",
+       "4     Química       8\n",
+       "5   Português      10\n",
+       "6      Física      10"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 93
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3020,9 +3365,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 94,
+   "source": [
+    "n = notas_fulano.shape[0]\n",
+    "n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 94
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3035,8 +3394,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 95,
+   "source": [
+    "elemento_md = (n + 1) / 2"
+   ],
    "outputs": [],
    "metadata": {
     "colab": {
@@ -3050,9 +3411,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 96,
+   "source": [
+    "notas_fulano.loc[elemento_md - 1]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "index     Geografia\n",
+       "Fulano            8\n",
+       "Name: 3, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 96
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3065,9 +3441,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 97,
+   "source": [
+    "notas_fulano.median()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Fulano    8.0\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 97
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3076,21 +3466,6 @@
     "colab_type": "code",
     "id": "NKccffcLjQMZ",
     "outputId": "46c1c33a-100b-4aca-e876-f3589b699b48"
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 53
-    },
-    "colab_type": "code",
-    "id": "ody5mfXLjQMb",
-    "outputId": "d43b24b8-1d80-4780-a059-720cdc073353"
    }
   },
   {
@@ -3107,9 +3482,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 99,
+   "source": [
+    "notas_beltrano = df.Beltrano.sample(6, random_state = 101)\n",
+    "notas_beltrano"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Matemática    10.0\n",
+       "Inglês         0.5\n",
+       "Física         9.5\n",
+       "História       3.0\n",
+       "Química       10.0\n",
+       "Português      2.0\n",
+       "Name: Beltrano, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 99
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3122,9 +3517,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 100,
+   "source": [
+    "notas_beltrano = notas_beltrano.sort_values()\n",
+    "notas_beltrano"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Inglês         0.5\n",
+       "Português      2.0\n",
+       "História       3.0\n",
+       "Física         9.5\n",
+       "Matemática    10.0\n",
+       "Química       10.0\n",
+       "Name: Beltrano, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 100
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "source": [
+    "notas_beltrano = notas_beltrano.reset_index()\n",
+    "notas_beltrano"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Beltrano</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Inglês</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Português</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>História</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Física</td>\n",
+       "      <td>9.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Matemática</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Química</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        index  Beltrano\n",
+       "0      Inglês       0.5\n",
+       "1   Português       2.0\n",
+       "2    História       3.0\n",
+       "3      Física       9.5\n",
+       "4  Matemática      10.0\n",
+       "5     Química      10.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 101
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3137,9 +3637,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 102,
+   "source": [
+    "n = notas_beltrano.shape[0]\n",
+    "n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 102
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3152,9 +3666,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 106,
+   "source": [
+    "elemento_md = n / 2\n",
+    "elemento_md"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 106
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3167,9 +3695,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 108,
+   "source": [
+    "(notas_beltrano['Beltrano'].loc[elemento_md - 1] + notas_beltrano['Beltrano'].loc[elemento_md]) / 2"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "6.25"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 108
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3182,24 +3723,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 35
-    },
-    "colab_type": "code",
-    "id": "N-jSUjZSjQMi",
-    "outputId": "1c265766-278c-4615-aec9-5c1f53cb2a25"
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 109,
+   "source": [
+    "notas_beltrano.median()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Beltrano    6.25\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 109
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3222,9 +3762,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 110,
+   "source": [
+    "dados['Renda'].median()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1200.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 110
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3237,9 +3790,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 111,
+   "source": [
+    "dados['Renda'].quantile()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1200.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 111
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
