--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
@@ -3831,9 +3831,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 112,
+   "source": [
+    "df.mode()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Matérias</th>\n",
+       "      <th>Fulano</th>\n",
+       "      <th>Beltrano</th>\n",
+       "      <th>Sicrano</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Matérias  Fulano  Beltrano  Sicrano\n",
+       "0              8      10.0      8.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 112
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3846,9 +3895,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 114,
+   "source": [
+    "exemplo = pd.Series([1, 2, 2, 3, 4, 4, 5, 6, 6])\n",
+    "exemplo"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0    1\n",
+       "1    2\n",
+       "2    2\n",
+       "3    3\n",
+       "4    4\n",
+       "5    4\n",
+       "6    5\n",
+       "7    6\n",
+       "8    6\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 114
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3861,9 +3933,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 115,
+   "source": [
+    "exemplo.mode()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0    2\n",
+       "1    4\n",
+       "2    6\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 115
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3876,9 +3964,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 117,
+   "source": [
+    "dados['Renda'].mode()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0    788\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 117
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3888,6 +3990,35 @@
     "id": "yUP6QFuiX7Io",
     "outputId": "4d51e179-bf46-4e35-dd06-f772e2fcab39"
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "source": [
+    "dados['Altura'].mode()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0    1.568128\n",
+       "1    1.671225\n",
+       "2    1.681659\n",
+       "3    1.692977\n",
+       "4    1.708163\n",
+       "5    1.708370\n",
+       "6    1.753842\n",
+       "7    1.779073\n",
+       "8    1.796462\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 118
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
