--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
@@ -5756,9 +5756,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 125,
+   "source": [
+    "notas_fulano['(Desvio)^2'] = notas_fulano['Desvio'].pow(2)\n",
+    "notas_fulano"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Matérias</th>\n",
+       "      <th>Fulano</th>\n",
+       "      <th>Desvio</th>\n",
+       "      <th>|Desvio|</th>\n",
+       "      <th>(Desvio)^2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Matemática</th>\n",
+       "      <td>8</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.081633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Português</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2.285714</td>\n",
+       "      <td>2.285714</td>\n",
+       "      <td>5.224490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inglês</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-3.714286</td>\n",
+       "      <td>3.714286</td>\n",
+       "      <td>13.795918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Geografia</th>\n",
+       "      <td>8</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.081633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>História</th>\n",
+       "      <td>6</td>\n",
+       "      <td>-1.714286</td>\n",
+       "      <td>1.714286</td>\n",
+       "      <td>2.938776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Física</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2.285714</td>\n",
+       "      <td>2.285714</td>\n",
+       "      <td>5.224490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Química</th>\n",
+       "      <td>8</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.081633</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Matérias    Fulano    Desvio  |Desvio|  (Desvio)^2\n",
+       "Matemática       8  0.285714  0.285714    0.081633\n",
+       "Português       10  2.285714  2.285714    5.224490\n",
+       "Inglês           4 -3.714286  3.714286   13.795918\n",
+       "Geografia        8  0.285714  0.285714    0.081633\n",
+       "História         6 -1.714286  1.714286    2.938776\n",
+       "Física          10  2.285714  2.285714    5.224490\n",
+       "Química          8  0.285714  0.285714    0.081633"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 125
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5771,9 +5871,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 127,
+   "source": [
+    "notas_fulano['(Desvio)^2'].sum() / (len(notas_fulano) - 1)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "4.57142857142857"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 127
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5786,18 +5899,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 35
-    },
-    "colab_type": "code",
-    "id": "EyrfPHLtjQNb",
-    "outputId": "a024839f-1c4a-4a91-b892-3966d7cc8f95"
-   }
+   "execution_count": 128,
+   "source": [
+    "variancia = notas_fulano['Fulano'].var()\n",
+    "variancia"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "4.57142857142857"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 128
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
