--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_1.ipynb
@@ -5957,6 +5957,273 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 129,
+   "source": [
+    "np.sqrt(variancia)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2.1380899352993947"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 129
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "source": [
+    "desvio_padrao = notas_fulano['Fulano'].std()\n",
+    "desvio_padrao"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2.1380899352993947"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 130
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "source": [
+    "df"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Matérias</th>\n",
+       "      <th>Fulano</th>\n",
+       "      <th>Beltrano</th>\n",
+       "      <th>Sicrano</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Matemática</th>\n",
+       "      <td>8</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Português</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inglês</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Geografia</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>História</th>\n",
+       "      <td>6</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Física</th>\n",
+       "      <td>10</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>8.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Química</th>\n",
+       "      <td>8</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Matérias    Fulano  Beltrano  Sicrano\n",
+       "Matemática       8      10.0      7.5\n",
+       "Português       10       2.0      8.0\n",
+       "Inglês           4       0.5      7.0\n",
+       "Geografia        8       1.0      8.0\n",
+       "História         6       3.0      8.0\n",
+       "Física          10       9.5      8.5\n",
+       "Química          8      10.0      7.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 131
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "source": [
+    "df.mean()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Matérias\n",
+       "Fulano      7.714286\n",
+       "Beltrano    5.142857\n",
+       "Sicrano     7.714286\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 132
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "source": [
+    "df.median()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Matérias\n",
+       "Fulano      8.0\n",
+       "Beltrano    3.0\n",
+       "Sicrano     8.0\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 133
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "source": [
+    "df.mode()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Matérias</th>\n",
+       "      <th>Fulano</th>\n",
+       "      <th>Beltrano</th>\n",
+       "      <th>Sicrano</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Matérias  Fulano  Beltrano  Sicrano\n",
+       "0              8      10.0      8.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 134
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "source": [
+    "df.std()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Matérias\n",
+       "Fulano      2.138090\n",
+       "Beltrano    4.460141\n",
+       "Sicrano     0.566947\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 135
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "source": [],
    "outputs": [],
