--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
@@ -193,7 +193,15 @@
    "source": [
     "import pandas as pd"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n"
+     ]
+    }
+   ],
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -499,8 +507,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 1,
+   "source": [
+    "from scipy.special import comb"
+   ],
    "outputs": [],
    "metadata": {
     "colab": {},
@@ -555,9 +565,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 5,
+   "source": [
+    "combinacoes = comb(60, 6)\n",
+    "combinacoes"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "50063860.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -570,9 +594,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 7,
+   "source": [
+    "probabilidade = 1 / combinacoes\n",
+    "print('%0.15f' % probabilidade)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.000000019974489\n"
+     ]
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
