--- a/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatistica/Curso_de_Estatística_Parte_2.ipynb
@@ -650,9 +650,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 8,
+   "source": [
+    "n = 10 \n",
+    "n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -715,9 +729,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 9,
+   "source": [
+    "numero_de_alternativas_por_questao = 3\n",
+    "p = 1 / numero_de_alternativas_por_questao\n",
+    "p"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.3333333333333333"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -740,9 +769,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 10,
+   "source": [
+    "q = 1 - p\n",
+    "q"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.6666666666666667"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -765,9 +808,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 11,
+   "source": [
+    "k = 5\n",
+    "k"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -790,9 +847,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 12,
+   "source": [
+    "probabilidade = (comb(n, k) * (p ** k) * (q ** (n - k)))\n",
+    "print('%0.8f' % probabilidade) "
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.13656455\n"
+     ]
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -816,8 +884,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 13,
+   "source": [
+    "from scipy.stats import binom"
+   ],
    "outputs": [],
    "metadata": {
     "colab": {},
@@ -837,9 +907,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 14,
+   "source": [
+    "probabilidade = binom.pmf(k, n, p)\n",
+    "print('%0.8f' % probabilidade)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.13656455\n"
+     ]
+    }
+   ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -866,30 +947,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 15,
+   "source": [
+    "binom.pmf(5, n, p) + binom.pmf(6, n, p) + binom.pmf(7, n, p) + binom.pmf(8, n, p) + binom.pmf(9, n, p) + binom.pmf(10, n, p)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.2131280800690952"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 16,
+   "source": [
+    "binom.pmf([5, 6, 7, 8, 9, 10], n, p)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([1.36564548e-01, 5.69018950e-02, 1.62576843e-02, 3.04831581e-03,\n",
+       "       3.38701756e-04, 1.69350878e-05])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 17,
+   "source": [
+    "binom.pmf([5, 6, 7, 8, 9, 10], n, p).sum()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.2131280800690952"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 19,
+   "source": [
+    "binom.cdf(4, n, p)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.7868719199309049"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "source": [
+    "1 - binom.cdf(4, n, p)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.21312808006909512"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "source": [
+    "binom.sf(4, n, p)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.21312808006909517"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
    "metadata": {}
   },
   {
@@ -897,10 +1071,7 @@
    "source": [
     "## <font color='blue'>Exemplo: Gincana</font>"
    ],
-   "metadata": {
-    "colab_type": "text",
-    "id": "7hAZ4XkMG3Cx"
-   }
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
